ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
spec:
  ingressClassName: nginx # or another appropriate class name
  rules:
    - http:
        paths:
          - path: /service2
            pathType: Prefix
            backend:
              service:
                name: service2
                port:
                  number: 5000
          - path: /service3
            pathType: Prefix
            backend:
              service:
                name: service3
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
